--- a/index.html
+++ b/index.html
@@ -65,16 +65,26 @@
     <h2>Study in Europe with Confidence</h2>
     <p>Europe is home to some of the world’s best educational institutions, offering high-quality education and exciting career prospects. Whether you’re looking for affordable programs or scholarships that cover tuition fees and living expenses, we help you find the perfect solution. Let <a href="https://bestconsultancy.net" target="_blank">the best study abroad consultant</a> in Pakistan guide you every step of the way.</p>
 
-    <h2>Our Services</h2>
+    <h2>Our Comprehensive Services</h2>
+    <p>At Best Consultancy, we provide end-to-end support to ensure your study abroad journey is smooth and stress-free. Our services include:</p>
     <ul>
-        <li>Comprehensive guidance for securing fully funded scholarships.</li>
-        <li>Assistance with applications, documents, and admissions.</li>
-        <li>Visa support and pre-departure counseling.</li>
-        <li>Options for both self-funded and scholarship-based study programs.</li>
+        <li><strong>Scholarship Assistance:</strong> We specialize in helping students secure fully funded scholarships that cover tuition fees, living expenses, and other costs.</li>
+        <li><strong>Application Guidance:</strong> Get expert advice on preparing and submitting successful applications to top universities.</li>
+        <li><strong>Visa Support:</strong> Our team ensures all your visa documentation is in order, increasing your chances of approval.</li>
+        <li><strong>Pre-Departure Counseling:</strong> From travel arrangements to accommodation advice, we prepare you for life abroad.</li>
     </ul>
 
     <h2>Why Choose Best Consultancy?</h2>
-    <p>Our proven track record and personalized support make us the top choice for students seeking to study in Europe. We simplify the process, ensuring you have access to the best opportunities while saving time and effort.</p>
+    <p>With a proven track record of success, Best Consultancy is the trusted choice for students looking to study in Europe. Here’s what sets us apart:</p>
+    <ul>
+        <li><strong>Experience and Expertise:</strong> Our team has years of experience in education consultancy, ensuring accurate and reliable advice.</li>
+        <li><strong>Personalized Guidance:</strong> We tailor our services to meet your specific needs and preferences.</li>
+        <li><strong>Wide Network:</strong> We collaborate with top universities in Europe to provide you with the best opportunities.</li>
+        <li><strong>Affordable Services:</strong> We make studying abroad accessible by offering cost-effective consultancy services.</li>
+    </ul>
+
+    <h2>Transform Your Future with Best Consultancy</h2>
+    <p>Don’t let financial constraints or application complexities hold you back from achieving your academic goals. At <a href="https://bestconsultancy.net" target="_blank">Best Consultancy</a>, we are committed to empowering students to pursue higher education in Europe with confidence. Whether you’re aiming for a fully funded scholarship or an affordable self-funded program, our team is here to guide you every step of the way. Contact us today and take the first step towards a brighter future.</p>
 </div>
 
 <footer>
